# sqlx-adapter

./: .gitignore  .travis.yml  Cargo.toml  README.md  sample.env  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
.sqlx/: query-1cabd2f674da323da9e0da724d3bcfe5f968b31500e8c8cf97fe16814bc04164.json  query-1f299262f01a2c9d2ee94079a12766573c91b2775a086c65bc9a5fdc91300bb0.json  query-24876462291b90324dfe3682e9f36247a328db780a48da47c9402e1d3ebd80c9.json  query-2872b56bbc5bed96b1a303bf9cf44610fb79a1b9330730c65953f0c1b88c2a53.json  query-3022cb733970ae5836ab3891367b209a7e1f0974242ecd0f55e5b0098152bad5.json  query-3ae7e28de7cb8896086c186dbc0e78f2a23eff67925322bdd3646d063d710584.json  query-438ee38e669be96e562d09d3bc5806b4c78b7aa2a9609c4eccb941c7dff7b107.json  query-4acfe0086a593b08177791bb3b47cb75a999041a3eb6a8f8177bebfa3c30d56f.json  query-4e7b82d256f7298564f46af6a45b89853785c32a5f83cb0b25609329c760428a.json  query-530d3f59ba6d986d3354242ff25faae78671d69c8935d2a2d57c0f9d1e91e832.json  query-f130c22d14ee2a99b9220ac1a45226ba97993ede9988a4c57d58bd066500a119.json  query-f8611a862ed1d3b982e8aa5ccab21e00c42a3fad8082cf15c2af88cd8388f41b.json  query-fa51ae7af271fc17c848694fbf1b37d46c5a2f4202e1b8dce1f66a65069beb0b.json  query-fb7ce69e70b345d2cf0ca017523c1b90b67b053add3d4cffb8d579bfc8f08345.json
scripts/: login-db.sh  setup-db.sh
src/: actions.rs  adapter.rs  error.rs  lib.rs  models.rs
src/databases/: mod.rs  mysql.rs  postgresql.rs
