[package]
name = "sqlx-adapter"
version = "0.4.2"
authors = ["Eason Chai <hackerchai.com@gmail.com>","Cheng JIANG <jiang.cheng@vip.163.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Sqlx adapter for casbin-rs"
homepage= "https://github.com/casbin-rs/sqlx-adapter"
readme= "README.md"

[dependencies]
casbin = { version = "2.0.8", default-features = false }
sqlx = { version = "0.6", default-features = false, features = [ "macros" ] }
async-trait = "0.1.51"
dotenv = { version = "0.15.0", default-features = false }
tokio = { version = "1.10.0", default-features = false, optional = true }
async-std = { version = "1.9.0", default-features = false, optional = true }
actix-rt = { version = "2.2.0", default-features = false, optional = true }

[features]
default = ["postgres", "runtime-tokio-native-tls", "offline"]

#databases
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

# async runtime
# async-std
runtime-async-std-native-tls = ["casbin/runtime-async-std", "sqlx/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["casbin/runtime-async-std", "sqlx/runtime-async-std-rustls"]
# tokio
runtime-tokio-native-tls = ["casbin/runtime-tokio", "sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["casbin/runtime-tokio", "sqlx/runtime-tokio-rustls"]
# actix (actually based on tokio)
runtime-actix-native-tls = ["casbin/runtime-tokio", "sqlx/runtime-actix-native-tls"]
runtime-actix-rustls = ["casbin/runtime-tokio", "sqlx/runtime-actix-rustls"]

#offline mode for sqlx
offline = ["sqlx/offline"]

[dev-dependencies]
async-std = { version = "1.9.0", features = [ "attributes" ] }
tokio = { version = "1.10.0", features = [ "full" ] }
actix-rt = { version = "2.2.0" }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "packed"
